2007-01-18  Corinna Vinschen  <corinna@vinschen.de>

	* mmap.cc (list::hash): Fix type to __ino64_t.
	(list::get_hash): Ditto.

2007-01-17  Corinna Vinschen  <corinna@vinschen.de>

	* mmap.cc (MapView9x): Note possible uselessness of retrying.
	(MapViewNT): Ditto.
	(mmap64): Fix pre-reservation to work for non NULL, non MAP_FIXED.

2007-01-15  Corinna Vinschen  <corinna@vinschen.de>

	* CYGWIN_LICENSE: Fix web pages and contact information.

2007-01-13  Christopher Faylor  <me@cgf.cx>

	* glob.cc: Update copyright notice with latest from FreeBSD.
	(glob0): Use correct type for c variable to propagate previously
	detected protection.

2007-01-12  Corinna Vinschen  <corinna@vinschen.de>

	* cygheap.cc (_csbrk): Fix off-by-one error.
	* cygwin.sc: Give .cygheap a minimum size of 512K.

2007-01-12  Corinna Vinschen  <corinna@vinschen.de>

	* fork.cc (child_copy): Add missing Windows PID in debug output.

2007-01-12  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc: Update copyright.

2007-01-10  Corinna Vinschen  <corinna@vinschen.de>

	* mmap.cc (mmap64): Pre-Reserve space for the whole mapping to get a
	useful, valid address before the actual mappings take place.
	Fix typo in comment.

2007-01-10  Corinna Vinschen  <corinna@vinschen.de>

	* syscalls.cc (sync): Use b_drive for B: drive (Thanks to Howard Chu).

2007-01-09  Corinna Vinschen  <corinna@vinschen.de>

	* mmap.cc: Do bookkeeping in 4K pages, rather than in 64K chunks.

2007-01-01  Christopher Faylor  <me@cgf.cx>

	* spawn.cc (spawn_guts): Don't expect synchronization from a non-cygwin
	_P_NOWAIT process.

2006-12-19  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h: Bump DLL minor version number to 24.

2006-12-18  Christopher Faylor  <me@cgf.cx>

	* pinfo.cc (set_myself): Use a more foolproof method for determining if
	the current process was started from another cygiwn process.

2006-12-12  Christopher Faylor  <me@cgf.cx>

	* syscalls.cc (popen): Allow '[rw][bt]'.
